Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64798

Invalid syntax segfaults QML engine

    XMLWordPrintable

Details

    • ccee761f06be0f62b84f944a76b0aa4dc759091f

    Description

      Execute following invalid QML code file (caused by careless search&replace).

       

      import QtQuick 2.6
      
      Item {
          property alias source: previewImage.source
          previewImage { id: previewImage }
      }
      

      Expected result: Error is printed.

       

      Actual result: Segmentation fault.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            jpetrell Joona Petrell
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes